fix(docs): improved contrast on highlighted text

--- a/src/routes/+layout.style.scss
+++ b/src/routes/+layout.style.scss
@@ -55,7 +55,7 @@ div.highlight {
 }
 
 span.highlight {
-    background-color: #eee;
+    background-color: var(--color-background-tertiary);
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 
     /* fix for long attributes values that don't wrap right */
@@ -207,7 +207,7 @@ figure.highlight {
 
 .section-header__version {
     align-self: flex-end;
-    background-color: var(--color-neutral-200);
+    background-color: var(--color-background-secondary);
     margin-left: auto;
     padding: 2px 4px;
 }
